--- a/top_stories/halfweek/page3.html
+++ b/top_stories/halfweek/page3.html
@@ -166,15 +166,15 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17166054">Space Invaders from Scratch</a>
+                                    <a href="https://news.ycombinator.com/item?id=17150335">Mortgage rates have been rising at a pace not seen in almost 50 years</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="http://nicktasios.nl/posts/space-invaders-from-scratch-part-1.html">Article</a> &nbsp;•&nbsp;
-                                    <strong><a href="https://news.ycombinator.com/user?id=Grieverheart">Grieverheart</a></strong> &nbsp;•&nbsp;
-                                    2018-05-27 08:28:07 &nbsp;•&nbsp;
-                                    17 comments &nbsp;•&nbsp;
-                                    116.0 points
+                                    <a class="node" href="https://www.lmtonline.com/business/article/Mortgage-rates-have-been-rising-at-a-pace-not-12940865.php">Article</a> &nbsp;•&nbsp;
+                                    <strong><a href="https://news.ycombinator.com/user?id=spking">spking</a></strong> &nbsp;•&nbsp;
+                                    2018-05-25 03:09:35 &nbsp;•&nbsp;
+                                    135 comments &nbsp;•&nbsp;
+                                    117.0 points
                                 </span>
                             </td>
                         </tr>
@@ -474,7 +474,7 @@
                                     <strong><a href="https://news.ycombinator.com/user?id=federicoponzi">federicoponzi</a></strong> &nbsp;•&nbsp;
                                     2018-05-27 22:01:52 &nbsp;•&nbsp;
                                     64 comments &nbsp;•&nbsp;
-                                    96.0 points
+                                    97.0 points
                                 </span>
                             </td>
                         </tr>
@@ -602,7 +602,7 @@
         </div>
         <div class="inner fr">
             <div class="sep10"></div>
-            <strong>Last update at 2018-05-28 00:38:03.034818</strong>
+            <strong>Last update at 2018-05-28 00:39:03.823413</strong>
         </div>
     </div>
 </div>
