--- a/top_stories/week/page2.html
+++ b/top_stories/week/page2.html
@@ -546,14 +546,14 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17116106">Apps for which macOS applies compatibillity fixes</a>
+                                    <a href="https://news.ycombinator.com/item?id=17164737">How to write efficient matrix multiplication</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://worthdoingbadly.com/appkitcompat/">Article</a> &nbsp;•&nbsp;
-                                    <strong><a href="https://news.ycombinator.com/user?id=ebcase">ebcase</a></strong> &nbsp;•&nbsp;
-                                    2018-05-21 04:17:08 &nbsp;•&nbsp;
-                                    125 comments &nbsp;•&nbsp;
+                                    <a class="node" href="https://gist.github.com/nadavrot/5b35d44e8ba3dd718e595e40184d03f0">Article</a> &nbsp;•&nbsp;
+                                    <strong><a href="https://news.ycombinator.com/user?id=Mtz1974">Mtz1974</a></strong> &nbsp;•&nbsp;
+                                    2018-05-26 23:29:46 &nbsp;•&nbsp;
+                                    74 comments &nbsp;•&nbsp;
                                     256.0 points
                                 </span>
                             </td>
@@ -602,7 +602,7 @@
         </div>
         <div class="inner fr">
             <div class="sep10"></div>
-            <strong>Last update at 2018-05-28 00:40:03.551348</strong>
+            <strong>Last update at 2018-05-28 00:50:02.916312</strong>
         </div>
     </div>
 </div>
