--- a/top_stories/daily/page2.html
+++ b/top_stories/daily/page2.html
@@ -166,14 +166,14 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17165806">A global array of telescopes reveals details on event horizon scales in Sgr A*</a>
+                                    <a href="https://news.ycombinator.com/item?id=17166516">Homespring – A Metaphor Oriented Programming Language</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://www.mpifr-bonn.mpg.de/pressreleases/2018/7">Article</a> &nbsp;•&nbsp;
-                                    <strong><a href="https://news.ycombinator.com/user?id=okket">okket</a></strong> &nbsp;•&nbsp;
-                                    2018-05-27 06:45:58 &nbsp;•&nbsp;
-                                    3 comments &nbsp;•&nbsp;
+                                    <a class="node" href="http://xeny.net/Homespring">Article</a> &nbsp;•&nbsp;
+                                    <strong><a href="https://news.ycombinator.com/user?id=EvergreenTree">EvergreenTree</a></strong> &nbsp;•&nbsp;
+                                    2018-05-27 11:46:17 &nbsp;•&nbsp;
+                                    9 comments &nbsp;•&nbsp;
                                     33.0 points
                                 </span>
                             </td>
@@ -206,14 +206,14 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17166680">Insider Accounts of Computing and Life at BBN: A sixty-year report (2011) [pdf]</a>
+                                    <a href="https://news.ycombinator.com/item?id=17167063">Unifying Theories of Psychedelic Drug Effects</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="http://walden-family.com/bbn/bbn-print2.pdf">Article</a> &nbsp;•&nbsp;
-                                    <strong><a href="https://news.ycombinator.com/user?id=indescions_2018">indescions_2018</a></strong> &nbsp;•&nbsp;
-                                    2018-05-27 12:45:19 &nbsp;•&nbsp;
-                                    7 comments &nbsp;•&nbsp;
+                                    <a class="node" href="https://www.ncbi.nlm.nih.gov/pmc/articles/PMC5853825/">Article</a> &nbsp;•&nbsp;
+                                    <strong><a href="https://news.ycombinator.com/user?id=lainon">lainon</a></strong> &nbsp;•&nbsp;
+                                    2018-05-27 14:47:36 &nbsp;•&nbsp;
+                                    4 comments &nbsp;•&nbsp;
                                     32.0 points
                                 </span>
                             </td>
@@ -226,15 +226,15 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17167063">Unifying Theories of Psychedelic Drug Effects</a>
+                                    <a href="https://news.ycombinator.com/item?id=17166680">Insider Accounts of Computing and Life at BBN: A sixty-year report (2011) [pdf]</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://www.ncbi.nlm.nih.gov/pmc/articles/PMC5853825/">Article</a> &nbsp;•&nbsp;
-                                    <strong><a href="https://news.ycombinator.com/user?id=lainon">lainon</a></strong> &nbsp;•&nbsp;
-                                    2018-05-27 14:47:36 &nbsp;•&nbsp;
-                                    5 comments &nbsp;•&nbsp;
-                                    29.0 points
+                                    <a class="node" href="http://walden-family.com/bbn/bbn-print2.pdf">Article</a> &nbsp;•&nbsp;
+                                    <strong><a href="https://news.ycombinator.com/user?id=indescions_2018">indescions_2018</a></strong> &nbsp;•&nbsp;
+                                    2018-05-27 12:45:19 &nbsp;•&nbsp;
+                                    7 comments &nbsp;•&nbsp;
+                                    32.0 points
                                 </span>
                             </td>
                         </tr>
@@ -274,7 +274,7 @@
                                     <strong><a href="https://news.ycombinator.com/user?id=benbreen">benbreen</a></strong> &nbsp;•&nbsp;
                                     2018-05-27 18:59:42 &nbsp;•&nbsp;
                                     4 comments &nbsp;•&nbsp;
-                                    21.0 points
+                                    22.0 points
                                 </span>
                             </td>
                         </tr>
@@ -506,6 +506,26 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
+                                    <a href="https://news.ycombinator.com/item?id=17169262">A Slower Speed of Light</a>
+                                </span>
+                                <div class="sep5"></div>
+                                <span class="small fade">
+                                    <a class="node" href="http://gamelab.mit.edu/games/a-slower-speed-of-light/">Article</a> &nbsp;•&nbsp;
+                                    <strong><a href="https://news.ycombinator.com/user?id=rbanffy">rbanffy</a></strong> &nbsp;•&nbsp;
+                                    2018-05-27 21:44:53 &nbsp;•&nbsp;
+                                    0 comments &nbsp;•&nbsp;
+                                    9.0 points
+                                </span>
+                            </td>
+                        </tr>
+                    </table>
+                </div>
+                
+                <div class="cell item" style="">
+                    <table cellpadding="0" cellspacing="0" border="0" width="100%">
+                        <tr>
+                            <td width="auto" valign="middle">
+                                <span class="item_title">
                                     <a href="https://news.ycombinator.com/item?id=17165905">Preventing a Posthuman Law of Freedom of Expression</a>
                                 </span>
                                 <div class="sep5"></div>
@@ -535,26 +555,6 @@
                                     2018-05-27 03:55:16 &nbsp;•&nbsp;
                                     4 comments &nbsp;•&nbsp;
                                     9.0 points
-                                </span>
-                            </td>
-                        </tr>
-                    </table>
-                </div>
-                
-                <div class="cell item" style="">
-                    <table cellpadding="0" cellspacing="0" border="0" width="100%">
-                        <tr>
-                            <td width="auto" valign="middle">
-                                <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17169262">A Slower Speed of Light</a>
-                                </span>
-                                <div class="sep5"></div>
-                                <span class="small fade">
-                                    <a class="node" href="http://gamelab.mit.edu/games/a-slower-speed-of-light/">Article</a> &nbsp;•&nbsp;
-                                    <strong><a href="https://news.ycombinator.com/user?id=rbanffy">rbanffy</a></strong> &nbsp;•&nbsp;
-                                    2018-05-27 21:44:53 &nbsp;•&nbsp;
-                                    0 comments &nbsp;•&nbsp;
-                                    8.0 points
                                 </span>
                             </td>
                         </tr>
@@ -602,7 +602,7 @@
         </div>
         <div class="inner fr">
             <div class="sep10"></div>
-            <strong>Last update at 2018-05-28 01:20:03.659751</strong>
+            <strong>Last update at 2018-05-28 01:30:03.728988</strong>
         </div>
     </div>
 </div>
