--- a/top_stories/week/page2.html
+++ b/top_stories/week/page2.html
@@ -166,26 +166,6 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17152496">Google and Facebook accused of breaking GDPR laws</a>
-                                </span>
-                                <div class="sep5"></div>
-                                <span class="small fade">
-                                    <a class="node" href="http://www.bbc.com/news/technology-44252327">Article</a> &nbsp;•&nbsp;
-                                    <strong><a href="https://news.ycombinator.com/user?id=nemoniac">nemoniac</a></strong> &nbsp;•&nbsp;
-                                    2018-05-25 11:27:50 &nbsp;•&nbsp;
-                                    368 comments &nbsp;•&nbsp;
-                                    324.0 points
-                                </span>
-                            </td>
-                        </tr>
-                    </table>
-                </div>
-                
-                <div class="cell item" style="">
-                    <table cellpadding="0" cellspacing="0" border="0" width="100%">
-                        <tr>
-                            <td width="auto" valign="middle">
-                                <span class="item_title">
                                     <a href="https://news.ycombinator.com/item?id=17116251">CBS “60 Minutes” piece on Google’s abuse of dominance</a>
                                 </span>
                                 <div class="sep5"></div>
@@ -513,8 +493,8 @@
                                     <a class="node" href="https://gist.github.com/nadavrot/5b35d44e8ba3dd718e595e40184d03f0">Article</a> &nbsp;•&nbsp;
                                     <strong><a href="https://news.ycombinator.com/user?id=Mtz1974">Mtz1974</a></strong> &nbsp;•&nbsp;
                                     2018-05-26 23:29:46 &nbsp;•&nbsp;
-                                    75 comments &nbsp;•&nbsp;
-                                    262.0 points
+                                    76 comments &nbsp;•&nbsp;
+                                    264.0 points
                                 </span>
                             </td>
                         </tr>
@@ -555,6 +535,26 @@
                                     2018-05-22 13:42:40 &nbsp;•&nbsp;
                                     128 comments &nbsp;•&nbsp;
                                     262.0 points
+                                </span>
+                            </td>
+                        </tr>
+                    </table>
+                </div>
+                
+                <div class="cell item" style="">
+                    <table cellpadding="0" cellspacing="0" border="0" width="100%">
+                        <tr>
+                            <td width="auto" valign="middle">
+                                <span class="item_title">
+                                    <a href="https://news.ycombinator.com/item?id=17116106">Apps for which macOS applies compatibillity fixes</a>
+                                </span>
+                                <div class="sep5"></div>
+                                <span class="small fade">
+                                    <a class="node" href="https://worthdoingbadly.com/appkitcompat/">Article</a> &nbsp;•&nbsp;
+                                    <strong><a href="https://news.ycombinator.com/user?id=ebcase">ebcase</a></strong> &nbsp;•&nbsp;
+                                    2018-05-21 04:17:08 &nbsp;•&nbsp;
+                                    125 comments &nbsp;•&nbsp;
+                                    256.0 points
                                 </span>
                             </td>
                         </tr>
@@ -602,7 +602,7 @@
         </div>
         <div class="inner fr">
             <div class="sep10"></div>
-            <strong>Last update at 2018-05-28 01:20:03.659751</strong>
+            <strong>Last update at 2018-05-28 01:30:03.728988</strong>
         </div>
     </div>
 </div>
