--- a/top_stories/daily/page3.html
+++ b/top_stories/daily/page3.html
@@ -226,15 +226,15 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17168834">Invisible Asymptotes – Growth at large scale technology companies</a>
+                                    <a href="https://news.ycombinator.com/item?id=17168380">Just Kills: How the Marine Corps Blew the Biggest War Crimes Case Since Vietnam</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="http://www.eugenewei.com/blog/2018/5/21/invisible-asymptotes">Article</a> &nbsp;•&nbsp;
-                                    <strong><a href="https://news.ycombinator.com/user?id=finiteloop">finiteloop</a></strong> &nbsp;•&nbsp;
-                                    2018-05-27 19:59:42 &nbsp;•&nbsp;
+                                    <a class="node" href="https://taskandpurpose.com/true-story-marine-corps-blew-biggest-war-crimes-case/">Article</a> &nbsp;•&nbsp;
+                                    <strong><a href="https://news.ycombinator.com/user?id=Pinckney">Pinckney</a></strong> &nbsp;•&nbsp;
+                                    2018-05-27 18:40:40 &nbsp;•&nbsp;
                                     0 comments &nbsp;•&nbsp;
-                                    6.0 points
+                                    7.0 points
                                 </span>
                             </td>
                         </tr>
@@ -246,13 +246,13 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17168380">Just Kills: How the Marine Corps Blew the Biggest War Crimes Case Since Vietnam</a>
+                                    <a href="https://news.ycombinator.com/item?id=17168834">Invisible Asymptotes – Growth at large scale technology companies</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://taskandpurpose.com/true-story-marine-corps-blew-biggest-war-crimes-case/">Article</a> &nbsp;•&nbsp;
-                                    <strong><a href="https://news.ycombinator.com/user?id=Pinckney">Pinckney</a></strong> &nbsp;•&nbsp;
-                                    2018-05-27 18:40:40 &nbsp;•&nbsp;
+                                    <a class="node" href="http://www.eugenewei.com/blog/2018/5/21/invisible-asymptotes">Article</a> &nbsp;•&nbsp;
+                                    <strong><a href="https://news.ycombinator.com/user?id=finiteloop">finiteloop</a></strong> &nbsp;•&nbsp;
+                                    2018-05-27 19:59:42 &nbsp;•&nbsp;
                                     0 comments &nbsp;•&nbsp;
                                     6.0 points
                                 </span>
@@ -506,26 +506,6 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17165137">A0C: Alpha Zero in Continuous Action Space</a>
-                                </span>
-                                <div class="sep5"></div>
-                                <span class="small fade">
-                                    <a class="node" href="https://arxiv.org/abs/1805.09613">Article</a> &nbsp;•&nbsp;
-                                    <strong><a href="https://news.ycombinator.com/user?id=jonbaer">jonbaer</a></strong> &nbsp;•&nbsp;
-                                    2018-05-27 02:10:27 &nbsp;•&nbsp;
-                                    0 comments &nbsp;•&nbsp;
-                                    5.0 points
-                                </span>
-                            </td>
-                        </tr>
-                    </table>
-                </div>
-                
-                <div class="cell item" style="">
-                    <table cellpadding="0" cellspacing="0" border="0" width="100%">
-                        <tr>
-                            <td width="auto" valign="middle">
-                                <span class="item_title">
                                     <a href="https://news.ycombinator.com/item?id=17170053">TXR: A Language for Data Munging</a>
                                 </span>
                                 <div class="sep5"></div>
@@ -553,6 +533,26 @@
                                     <a class="node" href="https://github.com/Halfeld/slidefy">Article</a> &nbsp;•&nbsp;
                                     <strong><a href="https://news.ycombinator.com/user?id=halfeld">halfeld</a></strong> &nbsp;•&nbsp;
                                     2018-05-27 21:10:30 &nbsp;•&nbsp;
+                                    0 comments &nbsp;•&nbsp;
+                                    4.0 points
+                                </span>
+                            </td>
+                        </tr>
+                    </table>
+                </div>
+                
+                <div class="cell item" style="">
+                    <table cellpadding="0" cellspacing="0" border="0" width="100%">
+                        <tr>
+                            <td width="auto" valign="middle">
+                                <span class="item_title">
+                                    <a href="https://news.ycombinator.com/item?id=17168793">Airstore: The cloud storage for your physical items</a>
+                                </span>
+                                <div class="sep5"></div>
+                                <span class="small fade">
+                                    <a class="node" href="http://www.airstore.xyz">Article</a> &nbsp;•&nbsp;
+                                    <strong><a href="https://news.ycombinator.com/user?id=hermanite">hermanite</a></strong> &nbsp;•&nbsp;
+                                    2018-05-27 19:52:48 &nbsp;•&nbsp;
                                     0 comments &nbsp;•&nbsp;
                                     4.0 points
                                 </span>
@@ -602,7 +602,7 @@
         </div>
         <div class="inner fr">
             <div class="sep10"></div>
-            <strong>Last update at 2018-05-28 02:10:03.757308</strong>
+            <strong>Last update at 2018-05-28 02:20:03.184834</strong>
         </div>
     </div>
 </div>
