--- a/top_stories/daily/page4.html
+++ b/top_stories/daily/page4.html
@@ -166,26 +166,6 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17168793">Airstore: The cloud storage for your physical items</a>
-                                </span>
-                                <div class="sep5"></div>
-                                <span class="small fade">
-                                    <a class="node" href="http://www.airstore.xyz">Article</a> &nbsp;•&nbsp;
-                                    <strong><a href="https://news.ycombinator.com/user?id=hermanite">hermanite</a></strong> &nbsp;•&nbsp;
-                                    2018-05-27 19:52:48 &nbsp;•&nbsp;
-                                    0 comments &nbsp;•&nbsp;
-                                    4.0 points
-                                </span>
-                            </td>
-                        </tr>
-                    </table>
-                </div>
-                
-                <div class="cell item" style="">
-                    <table cellpadding="0" cellspacing="0" border="0" width="100%">
-                        <tr>
-                            <td width="auto" valign="middle">
-                                <span class="item_title">
                                     <a href="https://news.ycombinator.com/item?id=17168348">The Best Shower Clock: A Casio Watch</a>
                                 </span>
                                 <div class="sep5"></div>
@@ -466,6 +446,26 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
+                                    <a href="https://news.ycombinator.com/item?id=17170126">Chess.com Acquires Komodo; Launches New 'Monte Carlo' Version</a>
+                                </span>
+                                <div class="sep5"></div>
+                                <span class="small fade">
+                                    <a class="node" href="https://www.chess.com/news/view/chess-com-acquires-komodo-launches-new-monte-carlo-version-similar-to-alphazero">Article</a> &nbsp;•&nbsp;
+                                    <strong><a href="https://news.ycombinator.com/user?id=poster123">poster123</a></strong> &nbsp;•&nbsp;
+                                    2018-05-28 01:30:40 &nbsp;•&nbsp;
+                                    0 comments &nbsp;•&nbsp;
+                                    3.0 points
+                                </span>
+                            </td>
+                        </tr>
+                    </table>
+                </div>
+                
+                <div class="cell item" style="">
+                    <table cellpadding="0" cellspacing="0" border="0" width="100%">
+                        <tr>
+                            <td width="auto" valign="middle">
+                                <span class="item_title">
                                     <a href="https://news.ycombinator.com/item?id=17169953">Latin Wikipedia</a>
                                 </span>
                                 <div class="sep5"></div>
@@ -601,7 +601,7 @@
         </div>
         <div class="inner fr">
             <div class="sep10"></div>
-            <strong>Last update at 2018-05-28 02:10:03.757308</strong>
+            <strong>Last update at 2018-05-28 02:20:03.184834</strong>
         </div>
     </div>
 </div>
