--- a/top_stories/week/page2.html
+++ b/top_stories/week/page2.html
@@ -473,8 +473,8 @@
                                     <a class="node" href="https://gist.github.com/nadavrot/5b35d44e8ba3dd718e595e40184d03f0">Article</a> &nbsp;•&nbsp;
                                     <strong><a href="https://news.ycombinator.com/user?id=Mtz1974">Mtz1974</a></strong> &nbsp;•&nbsp;
                                     2018-05-26 23:29:46 &nbsp;•&nbsp;
-                                    75 comments &nbsp;•&nbsp;
-                                    269.0 points
+                                    76 comments &nbsp;•&nbsp;
+                                    273.0 points
                                 </span>
                             </td>
                         </tr>
@@ -546,14 +546,14 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17116106">Apps for which macOS applies compatibillity fixes</a>
+                                    <a href="https://news.ycombinator.com/item?id=17166541">Every Ruler in Europe Every Year Since 400 BC</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://worthdoingbadly.com/appkitcompat/">Article</a> &nbsp;•&nbsp;
-                                    <strong><a href="https://news.ycombinator.com/user?id=ebcase">ebcase</a></strong> &nbsp;•&nbsp;
-                                    2018-05-21 04:17:08 &nbsp;•&nbsp;
-                                    125 comments &nbsp;•&nbsp;
+                                    <a class="node" href="http://thesoundingline.com/map-of-the-day-every-ruler-in-europe-since-400-bc/">Article</a> &nbsp;•&nbsp;
+                                    <strong><a href="https://news.ycombinator.com/user?id=Four_Star">Four_Star</a></strong> &nbsp;•&nbsp;
+                                    2018-05-27 11:58:58 &nbsp;•&nbsp;
+                                    105 comments &nbsp;•&nbsp;
                                     256.0 points
                                 </span>
                             </td>
@@ -602,7 +602,7 @@
         </div>
         <div class="inner fr">
             <div class="sep10"></div>
-            <strong>Last update at 2018-05-28 02:10:03.757308</strong>
+            <strong>Last update at 2018-05-28 02:20:03.184834</strong>
         </div>
     </div>
 </div>
