--- a/top_stories/week/page3.html
+++ b/top_stories/week/page3.html
@@ -166,15 +166,35 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17166541">Every Ruler in Europe Every Year Since 400 BC</a>
+                                    <a href="https://news.ycombinator.com/item?id=17116106">Apps for which macOS applies compatibillity fixes</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="http://thesoundingline.com/map-of-the-day-every-ruler-in-europe-since-400-bc/">Article</a> &nbsp;•&nbsp;
-                                    <strong><a href="https://news.ycombinator.com/user?id=Four_Star">Four_Star</a></strong> &nbsp;•&nbsp;
-                                    2018-05-27 11:58:58 &nbsp;•&nbsp;
-                                    105 comments &nbsp;•&nbsp;
-                                    255.0 points
+                                    <a class="node" href="https://worthdoingbadly.com/appkitcompat/">Article</a> &nbsp;•&nbsp;
+                                    <strong><a href="https://news.ycombinator.com/user?id=ebcase">ebcase</a></strong> &nbsp;•&nbsp;
+                                    2018-05-21 04:17:08 &nbsp;•&nbsp;
+                                    125 comments &nbsp;•&nbsp;
+                                    256.0 points
+                                </span>
+                            </td>
+                        </tr>
+                    </table>
+                </div>
+                
+                <div class="cell item" style="">
+                    <table cellpadding="0" cellspacing="0" border="0" width="100%">
+                        <tr>
+                            <td width="auto" valign="middle">
+                                <span class="item_title">
+                                    <a href="https://news.ycombinator.com/item?id=17157540">Mussels test positive for opioids in Seattle's Puget Sound</a>
+                                </span>
+                                <div class="sep5"></div>
+                                <span class="small fade">
+                                    <a class="node" href="https://www.bbc.com/news/amp/world-us-canada-44256765">Article</a> &nbsp;•&nbsp;
+                                    <strong><a href="https://news.ycombinator.com/user?id=lunchbreak">lunchbreak</a></strong> &nbsp;•&nbsp;
+                                    2018-05-25 20:19:19 &nbsp;•&nbsp;
+                                    120 comments &nbsp;•&nbsp;
+                                    253.0 points
                                 </span>
                             </td>
                         </tr>
@@ -195,26 +215,6 @@
                                     2018-05-23 07:11:54 &nbsp;•&nbsp;
                                     21 comments &nbsp;•&nbsp;
                                     253.0 points
-                                </span>
-                            </td>
-                        </tr>
-                    </table>
-                </div>
-                
-                <div class="cell item" style="">
-                    <table cellpadding="0" cellspacing="0" border="0" width="100%">
-                        <tr>
-                            <td width="auto" valign="middle">
-                                <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17157540">Mussels test positive for opioids in Seattle's Puget Sound</a>
-                                </span>
-                                <div class="sep5"></div>
-                                <span class="small fade">
-                                    <a class="node" href="https://www.bbc.com/news/amp/world-us-canada-44256765">Article</a> &nbsp;•&nbsp;
-                                    <strong><a href="https://news.ycombinator.com/user?id=lunchbreak">lunchbreak</a></strong> &nbsp;•&nbsp;
-                                    2018-05-25 20:19:19 &nbsp;•&nbsp;
-                                    120 comments &nbsp;•&nbsp;
-                                    252.0 points
                                 </span>
                             </td>
                         </tr>
@@ -602,7 +602,7 @@
         </div>
         <div class="inner fr">
             <div class="sep10"></div>
-            <strong>Last update at 2018-05-28 02:10:03.757308</strong>
+            <strong>Last update at 2018-05-28 02:20:03.184834</strong>
         </div>
     </div>
 </div>
