--- a/top_stories/daily/page3.html
+++ b/top_stories/daily/page3.html
@@ -166,6 +166,26 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
+                                    <a href="https://news.ycombinator.com/item?id=17165905">Preventing a Posthuman Law of Freedom of Expression</a>
+                                </span>
+                                <div class="sep5"></div>
+                                <span class="small fade">
+                                    <a class="node" href="https://knightcolumbia.org/content/preventing-posthuman-law-freedom-expression">Article</a> &nbsp;•&nbsp;
+                                    <strong><a href="https://news.ycombinator.com/user?id=walterbell">walterbell</a></strong> &nbsp;•&nbsp;
+                                    2018-05-27 07:24:41 &nbsp;•&nbsp;
+                                    0 comments &nbsp;•&nbsp;
+                                    9.0 points
+                                </span>
+                            </td>
+                        </tr>
+                    </table>
+                </div>
+                
+                <div class="cell item" style="">
+                    <table cellpadding="0" cellspacing="0" border="0" width="100%">
+                        <tr>
+                            <td width="auto" valign="middle">
+                                <span class="item_title">
                                     <a href="https://news.ycombinator.com/item?id=17165379">I was Jordan Peterson’s strongest supporter. Now I think he’s dangerous</a>
                                 </span>
                                 <div class="sep5"></div>
@@ -194,26 +214,6 @@
                                     <strong><a href="https://news.ycombinator.com/user?id=petethomas">petethomas</a></strong> &nbsp;•&nbsp;
                                     2018-05-27 20:05:50 &nbsp;•&nbsp;
                                     4 comments &nbsp;•&nbsp;
-                                    8.0 points
-                                </span>
-                            </td>
-                        </tr>
-                    </table>
-                </div>
-                
-                <div class="cell item" style="">
-                    <table cellpadding="0" cellspacing="0" border="0" width="100%">
-                        <tr>
-                            <td width="auto" valign="middle">
-                                <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17167077">Steering Behaviors for Autonomous Characters (1999)</a>
-                                </span>
-                                <div class="sep5"></div>
-                                <span class="small fade">
-                                    <a class="node" href="http://www.red3d.com/cwr/steer/gdc99/">Article</a> &nbsp;•&nbsp;
-                                    <strong><a href="https://news.ycombinator.com/user?id=tosh">tosh</a></strong> &nbsp;•&nbsp;
-                                    2018-05-27 14:52:27 &nbsp;•&nbsp;
-                                    0 comments &nbsp;•&nbsp;
                                     8.0 points
                                 </span>
                             </td>
@@ -602,7 +602,7 @@
         </div>
         <div class="inner fr">
             <div class="sep10"></div>
-            <strong>Last update at 2018-05-28 02:20:03.184834</strong>
+            <strong>Last update at 2018-05-28 02:30:03.612762</strong>
         </div>
     </div>
 </div>
