--- a/top_stories/halfweek/page1.html
+++ b/top_stories/halfweek/page1.html
@@ -173,8 +173,8 @@
                                     <a class="node" href="http://thesoundingline.com/map-of-the-day-every-ruler-in-europe-since-400-bc/">Article</a> &nbsp;•&nbsp;
                                     <strong><a href="https://news.ycombinator.com/user?id=Four_Star">Four_Star</a></strong> &nbsp;•&nbsp;
                                     2018-05-27 11:58:58 &nbsp;•&nbsp;
-                                    107 comments &nbsp;•&nbsp;
-                                    265.0 points
+                                    108 comments &nbsp;•&nbsp;
+                                    266.0 points
                                 </span>
                             </td>
                         </tr>
@@ -294,7 +294,7 @@
                                     <strong><a href="https://news.ycombinator.com/user?id=PascLeRasc">PascLeRasc</a></strong> &nbsp;•&nbsp;
                                     2018-05-26 16:49:54 &nbsp;•&nbsp;
                                     66 comments &nbsp;•&nbsp;
-                                    209.0 points
+                                    210.0 points
                                 </span>
                             </td>
                         </tr>
@@ -334,6 +334,26 @@
                                     <strong><a href="https://news.ycombinator.com/user?id=lihaoyi">lihaoyi</a></strong> &nbsp;•&nbsp;
                                     2018-05-27 07:07:37 &nbsp;•&nbsp;
                                     75 comments &nbsp;•&nbsp;
+                                    194.0 points
+                                </span>
+                            </td>
+                        </tr>
+                    </table>
+                </div>
+                
+                <div class="cell item" style="">
+                    <table cellpadding="0" cellspacing="0" border="0" width="100%">
+                        <tr>
+                            <td width="auto" valign="middle">
+                                <span class="item_title">
+                                    <a href="https://news.ycombinator.com/item?id=17169331">Python’s For - Else</a>
+                                </span>
+                                <div class="sep5"></div>
+                                <span class="small fade">
+                                    <a class="node" href="http://book.pythontips.com/en/latest/for_-_else.html">Article</a> &nbsp;•&nbsp;
+                                    <strong><a href="https://news.ycombinator.com/user?id=federicoponzi">federicoponzi</a></strong> &nbsp;•&nbsp;
+                                    2018-05-27 22:01:52 &nbsp;•&nbsp;
+                                    109 comments &nbsp;•&nbsp;
                                     193.0 points
                                 </span>
                             </td>
@@ -355,26 +375,6 @@
                                     2018-05-25 14:14:48 &nbsp;•&nbsp;
                                     168 comments &nbsp;•&nbsp;
                                     192.0 points
-                                </span>
-                            </td>
-                        </tr>
-                    </table>
-                </div>
-                
-                <div class="cell item" style="">
-                    <table cellpadding="0" cellspacing="0" border="0" width="100%">
-                        <tr>
-                            <td width="auto" valign="middle">
-                                <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17169331">Python’s For - Else</a>
-                                </span>
-                                <div class="sep5"></div>
-                                <span class="small fade">
-                                    <a class="node" href="http://book.pythontips.com/en/latest/for_-_else.html">Article</a> &nbsp;•&nbsp;
-                                    <strong><a href="https://news.ycombinator.com/user?id=federicoponzi">federicoponzi</a></strong> &nbsp;•&nbsp;
-                                    2018-05-27 22:01:52 &nbsp;•&nbsp;
-                                    109 comments &nbsp;•&nbsp;
-                                    186.0 points
                                 </span>
                             </td>
                         </tr>
@@ -546,14 +546,14 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17151865">The GDPR blog post</a>
+                                    <a href="https://news.ycombinator.com/item?id=17165483">Toshiba’s loss of star engineer tells tale of company's decline</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://medium.com/tsengineering/the-gdpr-blog-post-9a571b13079d">Article</a> &nbsp;•&nbsp;
-                                    <strong><a href="https://news.ycombinator.com/user?id=aychedee">aychedee</a></strong> &nbsp;•&nbsp;
-                                    2018-05-25 09:22:29 &nbsp;•&nbsp;
-                                    130 comments &nbsp;•&nbsp;
+                                    <a class="node" href="https://asia.nikkei.com/Spotlight/Toshiba-in-Turmoil/Toshiba-s-loss-of-star-engineer-tells-tale-of-company-s-decline">Article</a> &nbsp;•&nbsp;
+                                    <strong><a href="https://news.ycombinator.com/user?id=cinquemb">cinquemb</a></strong> &nbsp;•&nbsp;
+                                    2018-05-27 04:49:51 &nbsp;•&nbsp;
+                                    103 comments &nbsp;•&nbsp;
                                     161.0 points
                                 </span>
                             </td>
@@ -602,7 +602,7 @@
         </div>
         <div class="inner fr">
             <div class="sep10"></div>
-            <strong>Last update at 2018-05-28 03:30:03.770303</strong>
+            <strong>Last update at 2018-05-28 03:40:03.021568</strong>
         </div>
     </div>
 </div>
