--- a/top_stories/daily/page2.html
+++ b/top_stories/daily/page2.html
@@ -194,7 +194,7 @@
                                     <strong><a href="https://news.ycombinator.com/user?id=benbreen">benbreen</a></strong> &nbsp;•&nbsp;
                                     2018-05-27 18:59:42 &nbsp;•&nbsp;
                                     5 comments &nbsp;•&nbsp;
-                                    25.0 points
+                                    27.0 points
                                 </span>
                             </td>
                         </tr>
@@ -506,6 +506,26 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
+                                    <a href="https://news.ycombinator.com/item?id=17170251">ASCII Dashboards</a>
+                                </span>
+                                <div class="sep5"></div>
+                                <span class="small fade">
+                                    <a class="node" href="https://medium.com/@dieswaytoofast/ascii-dashboards-775f5d6aa062">Article</a> &nbsp;•&nbsp;
+                                    <strong><a href="https://news.ycombinator.com/user?id=setra">setra</a></strong> &nbsp;•&nbsp;
+                                    2018-05-28 02:14:11 &nbsp;•&nbsp;
+                                    0 comments &nbsp;•&nbsp;
+                                    7.0 points
+                                </span>
+                            </td>
+                        </tr>
+                    </table>
+                </div>
+                
+                <div class="cell item" style="">
+                    <table cellpadding="0" cellspacing="0" border="0" width="100%">
+                        <tr>
+                            <td width="auto" valign="middle">
+                                <span class="item_title">
                                     <a href="https://news.ycombinator.com/item?id=17170114">Browsing porn in incognito mode isn't nearly as private as you think</a>
                                 </span>
                                 <div class="sep5"></div>
@@ -526,35 +546,15 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17168834">Invisible Asymptotes – Growth at large scale technology companies</a>
+                                    <a href="https://news.ycombinator.com/item?id=17169847">How I priced my side-project. The pricing story of Cronhub</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="http://www.eugenewei.com/blog/2018/5/21/invisible-asymptotes">Article</a> &nbsp;•&nbsp;
-                                    <strong><a href="https://news.ycombinator.com/user?id=finiteloop">finiteloop</a></strong> &nbsp;•&nbsp;
-                                    2018-05-27 19:59:42 &nbsp;•&nbsp;
+                                    <a class="node" href="https://www.indiehackers.com/@tigran/how-i-priced-my-side-project-the-pricing-story-of-cronhub-34d968969c">Article</a> &nbsp;•&nbsp;
+                                    <strong><a href="https://news.ycombinator.com/user?id=thakobyan">thakobyan</a></strong> &nbsp;•&nbsp;
+                                    2018-05-27 23:59:45 &nbsp;•&nbsp;
                                     0 comments &nbsp;•&nbsp;
                                     7.0 points
-                                </span>
-                            </td>
-                        </tr>
-                    </table>
-                </div>
-                
-                <div class="cell item" style="">
-                    <table cellpadding="0" cellspacing="0" border="0" width="100%">
-                        <tr>
-                            <td width="auto" valign="middle">
-                                <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17170251">ASCII Dashboards</a>
-                                </span>
-                                <div class="sep5"></div>
-                                <span class="small fade">
-                                    <a class="node" href="https://medium.com/@dieswaytoofast/ascii-dashboards-775f5d6aa062">Article</a> &nbsp;•&nbsp;
-                                    <strong><a href="https://news.ycombinator.com/user?id=setra">setra</a></strong> &nbsp;•&nbsp;
-                                    2018-05-28 02:14:11 &nbsp;•&nbsp;
-                                    0 comments &nbsp;•&nbsp;
-                                    6.0 points
                                 </span>
                             </td>
                         </tr>
@@ -602,7 +602,7 @@
         </div>
         <div class="inner fr">
             <div class="sep10"></div>
-            <strong>Last update at 2018-05-28 04:50:03.440061</strong>
+            <strong>Last update at 2018-05-28 05:00:03.433679</strong>
         </div>
     </div>
 </div>
