--- a/top_stories/daily/page3.html
+++ b/top_stories/daily/page3.html
@@ -166,15 +166,15 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17170126">Chess.com Acquires Komodo; Launches New 'Monte Carlo' Version</a>
+                                    <a href="https://news.ycombinator.com/item?id=17168834">Invisible Asymptotes – Growth at large scale technology companies</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://www.chess.com/news/view/chess-com-acquires-komodo-launches-new-monte-carlo-version-similar-to-alphazero">Article</a> &nbsp;•&nbsp;
-                                    <strong><a href="https://news.ycombinator.com/user?id=poster123">poster123</a></strong> &nbsp;•&nbsp;
-                                    2018-05-28 01:30:40 &nbsp;•&nbsp;
+                                    <a class="node" href="http://www.eugenewei.com/blog/2018/5/21/invisible-asymptotes">Article</a> &nbsp;•&nbsp;
+                                    <strong><a href="https://news.ycombinator.com/user?id=finiteloop">finiteloop</a></strong> &nbsp;•&nbsp;
+                                    2018-05-27 19:59:42 &nbsp;•&nbsp;
                                     0 comments &nbsp;•&nbsp;
-                                    6.0 points
+                                    7.0 points
                                 </span>
                             </td>
                         </tr>
@@ -186,13 +186,13 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17169847">How I priced my side-project. The pricing story of Cronhub</a>
+                                    <a href="https://news.ycombinator.com/item?id=17170126">Chess.com Acquires Komodo; Launches New 'Monte Carlo' Version</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://www.indiehackers.com/@tigran/how-i-priced-my-side-project-the-pricing-story-of-cronhub-34d968969c">Article</a> &nbsp;•&nbsp;
-                                    <strong><a href="https://news.ycombinator.com/user?id=thakobyan">thakobyan</a></strong> &nbsp;•&nbsp;
-                                    2018-05-27 23:59:45 &nbsp;•&nbsp;
+                                    <a class="node" href="https://www.chess.com/news/view/chess-com-acquires-komodo-launches-new-monte-carlo-version-similar-to-alphazero">Article</a> &nbsp;•&nbsp;
+                                    <strong><a href="https://news.ycombinator.com/user?id=poster123">poster123</a></strong> &nbsp;•&nbsp;
+                                    2018-05-28 01:30:40 &nbsp;•&nbsp;
                                     0 comments &nbsp;•&nbsp;
                                     6.0 points
                                 </span>
@@ -602,7 +602,7 @@
         </div>
         <div class="inner fr">
             <div class="sep10"></div>
-            <strong>Last update at 2018-05-28 04:50:03.440061</strong>
+            <strong>Last update at 2018-05-28 05:00:03.433679</strong>
         </div>
     </div>
 </div>
