--- a/top_stories/week/page4.html
+++ b/top_stories/week/page4.html
@@ -166,6 +166,26 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
+                                    <a href="https://news.ycombinator.com/item?id=17145811">The Egg (2009)</a>
+                                </span>
+                                <div class="sep5"></div>
+                                <span class="small fade">
+                                    <a class="node" href="http://www.galactanet.com/oneoff/theegg_mod.html">Article</a> &nbsp;•&nbsp;
+                                    <strong><a href="https://news.ycombinator.com/user?id=Tomte">Tomte</a></strong> &nbsp;•&nbsp;
+                                    2018-05-24 16:45:22 &nbsp;•&nbsp;
+                                    50 comments &nbsp;•&nbsp;
+                                    222.0 points
+                                </span>
+                            </td>
+                        </tr>
+                    </table>
+                </div>
+                
+                <div class="cell item" style="">
+                    <table cellpadding="0" cellspacing="0" border="0" width="100%">
+                        <tr>
+                            <td width="auto" valign="middle">
+                                <span class="item_title">
                                     <a href="https://news.ycombinator.com/item?id=17143452">Zuckerberg set up fraudulent scheme to 'weaponise' data, court case alleges</a>
                                 </span>
                                 <div class="sep5"></div>
@@ -195,26 +215,6 @@
                                     2018-05-21 13:51:54 &nbsp;•&nbsp;
                                     194 comments &nbsp;•&nbsp;
                                     219.0 points
-                                </span>
-                            </td>
-                        </tr>
-                    </table>
-                </div>
-                
-                <div class="cell item" style="">
-                    <table cellpadding="0" cellspacing="0" border="0" width="100%">
-                        <tr>
-                            <td width="auto" valign="middle">
-                                <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17169331">Python’s For - Else</a>
-                                </span>
-                                <div class="sep5"></div>
-                                <span class="small fade">
-                                    <a class="node" href="http://book.pythontips.com/en/latest/for_-_else.html">Article</a> &nbsp;•&nbsp;
-                                    <strong><a href="https://news.ycombinator.com/user?id=federicoponzi">federicoponzi</a></strong> &nbsp;•&nbsp;
-                                    2018-05-27 22:01:52 &nbsp;•&nbsp;
-                                    121 comments &nbsp;•&nbsp;
-                                    216.0 points
                                 </span>
                             </td>
                         </tr>
@@ -354,7 +354,7 @@
                                     <strong><a href="https://news.ycombinator.com/user?id=erric">erric</a></strong> &nbsp;•&nbsp;
                                     2018-05-27 12:26:48 &nbsp;•&nbsp;
                                     56 comments &nbsp;•&nbsp;
-                                    206.0 points
+                                    207.0 points
                                 </span>
                             </td>
                         </tr>
@@ -374,7 +374,7 @@
                                     <strong><a href="https://news.ycombinator.com/user?id=K0nserv">K0nserv</a></strong> &nbsp;•&nbsp;
                                     2018-05-24 12:15:40 &nbsp;•&nbsp;
                                     182 comments &nbsp;•&nbsp;
-                                    203.0 points
+                                    204.0 points
                                 </span>
                             </td>
                         </tr>
@@ -494,7 +494,7 @@
                                     <strong><a href="https://news.ycombinator.com/user?id=lihaoyi">lihaoyi</a></strong> &nbsp;•&nbsp;
                                     2018-05-27 07:07:37 &nbsp;•&nbsp;
                                     75 comments &nbsp;•&nbsp;
-                                    194.0 points
+                                    195.0 points
                                 </span>
                             </td>
                         </tr>
@@ -601,7 +601,7 @@
         </div>
         <div class="inner fr">
             <div class="sep10"></div>
-            <strong>Last update at 2018-05-28 04:50:03.440061</strong>
+            <strong>Last update at 2018-05-28 05:00:03.433679</strong>
         </div>
     </div>
 </div>
