--- a/top_stories/halfweek/page1.html
+++ b/top_stories/halfweek/page1.html
@@ -166,15 +166,15 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17166541">Every Ruler in Europe Every Year Since 400 BC</a>
+                                    <a href="https://news.ycombinator.com/item?id=17159497">Ghostery exposed everyone's email address in its GDPR email by not using BCC</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="http://thesoundingline.com/map-of-the-day-every-ruler-in-europe-since-400-bc/">Article</a> &nbsp;•&nbsp;
-                                    <strong><a href="https://news.ycombinator.com/user?id=Four_Star">Four_Star</a></strong> &nbsp;•&nbsp;
-                                    2018-05-27 11:58:58 &nbsp;•&nbsp;
-                                    115 comments &nbsp;•&nbsp;
-                                    275.0 points
+                                    <a class="node" href="https://www.reddit.com/r/technology/comments/8m45k6/ghostery_have_exposed_everyones_email_address_in/">Article</a> &nbsp;•&nbsp;
+                                    <strong><a href="https://news.ycombinator.com/user?id=rexbee">rexbee</a></strong> &nbsp;•&nbsp;
+                                    2018-05-26 01:10:31 &nbsp;•&nbsp;
+                                    57 comments &nbsp;•&nbsp;
+                                    278.0 points
                                 </span>
                             </td>
                         </tr>
@@ -233,8 +233,8 @@
                                     <a class="node" href="http://book.pythontips.com/en/latest/for_-_else.html">Article</a> &nbsp;•&nbsp;
                                     <strong><a href="https://news.ycombinator.com/user?id=federicoponzi">federicoponzi</a></strong> &nbsp;•&nbsp;
                                     2018-05-27 22:01:52 &nbsp;•&nbsp;
-                                    130 comments &nbsp;•&nbsp;
-                                    237.0 points
+                                    132 comments &nbsp;•&nbsp;
+                                    243.0 points
                                 </span>
                             </td>
                         </tr>
@@ -254,7 +254,7 @@
                                     <strong><a href="https://news.ycombinator.com/user?id=ingve">ingve</a></strong> &nbsp;•&nbsp;
                                     2018-05-26 19:00:36 &nbsp;•&nbsp;
                                     43 comments &nbsp;•&nbsp;
-                                    232.0 points
+                                    233.0 points
                                 </span>
                             </td>
                         </tr>
@@ -534,7 +534,7 @@
                                     <strong><a href="https://news.ycombinator.com/user?id=cinquemb">cinquemb</a></strong> &nbsp;•&nbsp;
                                     2018-05-27 04:49:51 &nbsp;•&nbsp;
                                     106 comments &nbsp;•&nbsp;
-                                    162.0 points
+                                    163.0 points
                                 </span>
                             </td>
                         </tr>
@@ -602,7 +602,7 @@
         </div>
         <div class="inner fr">
             <div class="sep10"></div>
-            <strong>Last update at 2018-05-28 05:30:03.493164</strong>
+            <strong>Last update at 2018-05-28 05:40:03.282010</strong>
         </div>
     </div>
 </div>
