--- a/top_stories/halfweek/index.html
+++ b/top_stories/halfweek/index.html
@@ -354,7 +354,7 @@
                                     <strong><a href="https://news.ycombinator.com/user?id=rexbee">rexbee</a></strong> &nbsp;•&nbsp;
                                     2018-05-26 03:02:51 &nbsp;•&nbsp;
                                     388 comments &nbsp;•&nbsp;
-                                    382.0 points
+                                    383.0 points
                                 </span>
                             </td>
                         </tr>
@@ -434,7 +434,7 @@
                                     <strong><a href="https://news.ycombinator.com/user?id=AlexeyBrin">AlexeyBrin</a></strong> &nbsp;•&nbsp;
                                     2018-05-26 13:41:54 &nbsp;•&nbsp;
                                     176 comments &nbsp;•&nbsp;
-                                    336.0 points
+                                    337.0 points
                                 </span>
                             </td>
                         </tr>
@@ -494,7 +494,7 @@
                                     <strong><a href="https://news.ycombinator.com/user?id=Mtz1974">Mtz1974</a></strong> &nbsp;•&nbsp;
                                     2018-05-26 23:29:46 &nbsp;•&nbsp;
                                     83 comments &nbsp;•&nbsp;
-                                    309.0 points
+                                    312.0 points
                                 </span>
                             </td>
                         </tr>
@@ -546,14 +546,14 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17159497">Ghostery exposed everyone's email address in its GDPR email by not using BCC</a>
+                                    <a href="https://news.ycombinator.com/item?id=17166541">Every Ruler in Europe Every Year Since 400 BC</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://www.reddit.com/r/technology/comments/8m45k6/ghostery_have_exposed_everyones_email_address_in/">Article</a> &nbsp;•&nbsp;
-                                    <strong><a href="https://news.ycombinator.com/user?id=rexbee">rexbee</a></strong> &nbsp;•&nbsp;
-                                    2018-05-26 01:10:31 &nbsp;•&nbsp;
-                                    57 comments &nbsp;•&nbsp;
+                                    <a class="node" href="http://thesoundingline.com/map-of-the-day-every-ruler-in-europe-since-400-bc/">Article</a> &nbsp;•&nbsp;
+                                    <strong><a href="https://news.ycombinator.com/user?id=Four_Star">Four_Star</a></strong> &nbsp;•&nbsp;
+                                    2018-05-27 11:58:58 &nbsp;•&nbsp;
+                                    115 comments &nbsp;•&nbsp;
                                     278.0 points
                                 </span>
                             </td>
@@ -599,7 +599,7 @@
         </div>
         <div class="inner fr">
             <div class="sep10"></div>
-            <strong>Last update at 2018-05-28 05:30:03.493164</strong>
+            <strong>Last update at 2018-05-28 05:40:03.282010</strong>
         </div>
     </div>
 </div>
