--- a/jobs/index.html
+++ b/jobs/index.html
@@ -110,7 +110,7 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_hot_topic_title">
-                                    <a href="https://news.ycombinator.com/item?id=17151144">UserInsights – Get 5 minutes of real user feedback</a>
+                                    <a href="https://news.ycombinator.com/item?id=17160131">Experimenting with Clojure 1.9's tools.deps and CLI</a>
                                 </span>
                             </td>
                         </tr>
@@ -577,7 +577,7 @@
         </div>
         <div class="inner fr">
             <div class="sep10"></div>
-            <strong>Last update at 2018-05-28 06:30:02.882692</strong>
+            <strong>Last update at 2018-05-28 06:40:02.932883</strong>
         </div>
     </div>
 </div>
