--- a/top_stories/daily/page3.html
+++ b/top_stories/daily/page3.html
@@ -110,7 +110,7 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_hot_topic_title">
-                                    <a href="https://news.ycombinator.com/item?id=17151144">UserInsights – Get 5 minutes of real user feedback</a>
+                                    <a href="https://news.ycombinator.com/item?id=17160131">Experimenting with Clojure 1.9's tools.deps and CLI</a>
                                 </span>
                             </td>
                         </tr>
@@ -166,15 +166,15 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17169532">How Brain Waves Surf Sound Waves to Process Speech</a>
+                                    <a href="https://news.ycombinator.com/item?id=17168123">Researchers Bypass AMD’s SEV Virtual Machine Encryption</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="http://nautil.us/blog/how-brain-waves-surf-sound-waves-to-process-speech">Article</a> &nbsp;•&nbsp;
-                                    <strong><a href="https://news.ycombinator.com/user?id=dnetesn">dnetesn</a></strong> &nbsp;•&nbsp;
-                                    2018-05-27 22:48:37 &nbsp;•&nbsp;
-                                    1 comments &nbsp;•&nbsp;
-                                    7.0 points
+                                    <a class="node" href="https://www.bleepingcomputer.com/news/security/researchers-bypass-amd-s-sev-virtual-machine-encryption/">Article</a> &nbsp;•&nbsp;
+                                    <strong><a href="https://news.ycombinator.com/user?id=ereli1">ereli1</a></strong> &nbsp;•&nbsp;
+                                    2018-05-27 17:52:20 &nbsp;•&nbsp;
+                                    0 comments &nbsp;•&nbsp;
+                                    8.0 points
                                 </span>
                             </td>
                         </tr>
@@ -186,14 +186,14 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17169112">The 1975 HP 1607 Logic State Analyzer, one of the first logic analyzers [video]</a>
+                                    <a href="https://news.ycombinator.com/item?id=17170114">Browsing porn in incognito mode isn't nearly as private as you think</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://www.youtube.com/watch?v=SiBozvGl5_I">Article</a> &nbsp;•&nbsp;
-                                    <strong><a href="https://news.ycombinator.com/user?id=kensai">kensai</a></strong> &nbsp;•&nbsp;
-                                    2018-05-27 21:06:56 &nbsp;•&nbsp;
-                                    0 comments &nbsp;•&nbsp;
+                                    <a class="node" href="https://www.theguardian.com/commentisfree/2018/may/27/incognito-mode-what-does-it-mean-history-google-chrome-privacy-settings">Article</a> &nbsp;•&nbsp;
+                                    <strong><a href="https://news.ycombinator.com/user?id=pmoriarty">pmoriarty</a></strong> &nbsp;•&nbsp;
+                                    2018-05-28 01:25:07 &nbsp;•&nbsp;
+                                    None comments &nbsp;•&nbsp;
                                     7.0 points
                                 </span>
                             </td>
@@ -602,7 +602,7 @@
         </div>
         <div class="inner fr">
             <div class="sep10"></div>
-            <strong>Last update at 2018-05-28 06:30:02.882692</strong>
+            <strong>Last update at 2018-05-28 06:40:02.932883</strong>
         </div>
     </div>
 </div>
