--- a/top_stories/halfweek/page1.html
+++ b/top_stories/halfweek/page1.html
@@ -110,7 +110,7 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_hot_topic_title">
-                                    <a href="https://news.ycombinator.com/item?id=17151144">UserInsights – Get 5 minutes of real user feedback</a>
+                                    <a href="https://news.ycombinator.com/item?id=17160131">Experimenting with Clojure 1.9's tools.deps and CLI</a>
                                 </span>
                             </td>
                         </tr>
@@ -174,7 +174,7 @@
                                     <strong><a href="https://news.ycombinator.com/user?id=federicoponzi">federicoponzi</a></strong> &nbsp;•&nbsp;
                                     2018-05-27 22:01:52 &nbsp;•&nbsp;
                                     146 comments &nbsp;•&nbsp;
-                                    264.0 points
+                                    270.0 points
                                 </span>
                             </td>
                         </tr>
@@ -254,7 +254,7 @@
                                     <strong><a href="https://news.ycombinator.com/user?id=danso">danso</a></strong> &nbsp;•&nbsp;
                                     2018-05-27 03:21:09 &nbsp;•&nbsp;
                                     242 comments &nbsp;•&nbsp;
-                                    227.0 points
+                                    228.0 points
                                 </span>
                             </td>
                         </tr>
@@ -373,7 +373,7 @@
                                     <a class="node" href="https://www.bloomberg.com/news/features/2018-03-15/this-multibillion-dollar-corporation-is-controlled-by-a-penniless-yoga-superstar">Article</a> &nbsp;•&nbsp;
                                     <strong><a href="https://news.ycombinator.com/user?id=dsr12">dsr12</a></strong> &nbsp;•&nbsp;
                                     2018-05-27 05:18:04 &nbsp;•&nbsp;
-                                    106 comments &nbsp;•&nbsp;
+                                    108 comments &nbsp;•&nbsp;
                                     187.0 points
                                 </span>
                             </td>
@@ -602,7 +602,7 @@
         </div>
         <div class="inner fr">
             <div class="sep10"></div>
-            <strong>Last update at 2018-05-28 06:30:02.882692</strong>
+            <strong>Last update at 2018-05-28 06:40:02.932883</strong>
         </div>
     </div>
 </div>
