--- a/top_stories/halfweek/page3.html
+++ b/top_stories/halfweek/page3.html
@@ -110,7 +110,7 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_hot_topic_title">
-                                    <a href="https://news.ycombinator.com/item?id=17151144">UserInsights – Get 5 minutes of real user feedback</a>
+                                    <a href="https://news.ycombinator.com/item?id=17160131">Experimenting with Clojure 1.9's tools.deps and CLI</a>
                                 </span>
                             </td>
                         </tr>
@@ -354,7 +354,7 @@
                                     <strong><a href="https://news.ycombinator.com/user?id=tosh">tosh</a></strong> &nbsp;•&nbsp;
                                     2018-05-27 14:09:42 &nbsp;•&nbsp;
                                     34 comments &nbsp;•&nbsp;
-                                    107.0 points
+                                    108.0 points
                                 </span>
                             </td>
                         </tr>
@@ -386,14 +386,14 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17154435">How Amazon Plans To Use Whole Foods to Dominate the Retail Industry</a>
+                                    <a href="https://news.ycombinator.com/item?id=17166132">Tomorrow's cities: Google's Toronto city built 'from the internet up'</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="http://fortune.com/longform/amazon-groceries-fortune-500/">Article</a> &nbsp;•&nbsp;
-                                    <strong><a href="https://news.ycombinator.com/user?id=juokaz">juokaz</a></strong> &nbsp;•&nbsp;
-                                    2018-05-25 15:12:36 &nbsp;•&nbsp;
-                                    68 comments &nbsp;•&nbsp;
+                                    <a class="node" href="http://www.bbc.com/news/technology-41414872">Article</a> &nbsp;•&nbsp;
+                                    <strong><a href="https://news.ycombinator.com/user?id=adzicg">adzicg</a></strong> &nbsp;•&nbsp;
+                                    2018-05-27 09:03:09 &nbsp;•&nbsp;
+                                    36 comments &nbsp;•&nbsp;
                                     104.0 points
                                 </span>
                             </td>
@@ -406,15 +406,15 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17166132">Tomorrow's cities: Google's Toronto city built 'from the internet up'</a>
+                                    <a href="https://news.ycombinator.com/item?id=17154435">How Amazon Plans To Use Whole Foods to Dominate the Retail Industry</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="http://www.bbc.com/news/technology-41414872">Article</a> &nbsp;•&nbsp;
-                                    <strong><a href="https://news.ycombinator.com/user?id=adzicg">adzicg</a></strong> &nbsp;•&nbsp;
-                                    2018-05-27 09:03:09 &nbsp;•&nbsp;
-                                    35 comments &nbsp;•&nbsp;
-                                    103.0 points
+                                    <a class="node" href="http://fortune.com/longform/amazon-groceries-fortune-500/">Article</a> &nbsp;•&nbsp;
+                                    <strong><a href="https://news.ycombinator.com/user?id=juokaz">juokaz</a></strong> &nbsp;•&nbsp;
+                                    2018-05-25 15:12:36 &nbsp;•&nbsp;
+                                    68 comments &nbsp;•&nbsp;
+                                    104.0 points
                                 </span>
                             </td>
                         </tr>
@@ -474,7 +474,7 @@
                                     <strong><a href="https://news.ycombinator.com/user?id=hoaphumanoid">hoaphumanoid</a></strong> &nbsp;•&nbsp;
                                     2018-05-27 21:00:55 &nbsp;•&nbsp;
                                     44 comments &nbsp;•&nbsp;
-                                    101.0 points
+                                    102.0 points
                                 </span>
                             </td>
                         </tr>
@@ -533,7 +533,7 @@
                                     <a class="node" href="https://www.nasa.gov/feature/what-really-happened-to-that-melted-nasa-camera">Article</a> &nbsp;•&nbsp;
                                     <strong><a href="https://news.ycombinator.com/user?id=ColinWright">ColinWright</a></strong> &nbsp;•&nbsp;
                                     2018-05-27 07:58:31 &nbsp;•&nbsp;
-                                    20 comments &nbsp;•&nbsp;
+                                    21 comments &nbsp;•&nbsp;
                                     98.0 points
                                 </span>
                             </td>
@@ -602,7 +602,7 @@
         </div>
         <div class="inner fr">
             <div class="sep10"></div>
-            <strong>Last update at 2018-05-28 06:30:02.882692</strong>
+            <strong>Last update at 2018-05-28 06:40:02.932883</strong>
         </div>
     </div>
 </div>
