--- a/top_stories/week/page3.html
+++ b/top_stories/week/page3.html
@@ -110,7 +110,7 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_hot_topic_title">
-                                    <a href="https://news.ycombinator.com/item?id=17151144">UserInsights – Get 5 minutes of real user feedback</a>
+                                    <a href="https://news.ycombinator.com/item?id=17160131">Experimenting with Clojure 1.9's tools.deps and CLI</a>
                                 </span>
                             </td>
                         </tr>
@@ -394,7 +394,7 @@
                                     <strong><a href="https://news.ycombinator.com/user?id=spking">spking</a></strong> &nbsp;•&nbsp;
                                     2018-05-24 12:58:41 &nbsp;•&nbsp;
                                     184 comments &nbsp;•&nbsp;
-                                    233.0 points
+                                    234.0 points
                                 </span>
                             </td>
                         </tr>
@@ -414,7 +414,7 @@
                                     <strong><a href="https://news.ycombinator.com/user?id=danso">danso</a></strong> &nbsp;•&nbsp;
                                     2018-05-27 03:21:09 &nbsp;•&nbsp;
                                     242 comments &nbsp;•&nbsp;
-                                    227.0 points
+                                    228.0 points
                                 </span>
                             </td>
                         </tr>
@@ -602,7 +602,7 @@
         </div>
         <div class="inner fr">
             <div class="sep10"></div>
-            <strong>Last update at 2018-05-28 06:30:02.882692</strong>
+            <strong>Last update at 2018-05-28 06:40:02.932883</strong>
         </div>
     </div>
 </div>
