--- a/top_stories/halfweek/page1.html
+++ b/top_stories/halfweek/page1.html
@@ -254,7 +254,7 @@
                                     <strong><a href="https://news.ycombinator.com/user?id=danso">danso</a></strong> &nbsp;•&nbsp;
                                     2018-05-27 03:21:09 &nbsp;•&nbsp;
                                     245 comments &nbsp;•&nbsp;
-                                    228.0 points
+                                    229.0 points
                                 </span>
                             </td>
                         </tr>
@@ -373,7 +373,7 @@
                                     <a class="node" href="https://www.bloomberg.com/news/features/2018-03-15/this-multibillion-dollar-corporation-is-controlled-by-a-penniless-yoga-superstar">Article</a> &nbsp;•&nbsp;
                                     <strong><a href="https://news.ycombinator.com/user?id=dsr12">dsr12</a></strong> &nbsp;•&nbsp;
                                     2018-05-27 05:18:04 &nbsp;•&nbsp;
-                                    111 comments &nbsp;•&nbsp;
+                                    113 comments &nbsp;•&nbsp;
                                     188.0 points
                                 </span>
                             </td>
@@ -473,8 +473,8 @@
                                     <a class="node" href="https://www.infoworld.com/article/3275924/java/oracle-plans-to-dump-risky-java-serialization.html">Article</a> &nbsp;•&nbsp;
                                     <strong><a href="https://news.ycombinator.com/user?id=s-macke">s-macke</a></strong> &nbsp;•&nbsp;
                                     2018-05-27 06:44:02 &nbsp;•&nbsp;
-                                    83 comments &nbsp;•&nbsp;
-                                    170.0 points
+                                    84 comments &nbsp;•&nbsp;
+                                    171.0 points
                                 </span>
                             </td>
                         </tr>
@@ -533,7 +533,7 @@
                                     <a class="node" href="https://asia.nikkei.com/Spotlight/Toshiba-in-Turmoil/Toshiba-s-loss-of-star-engineer-tells-tale-of-company-s-decline">Article</a> &nbsp;•&nbsp;
                                     <strong><a href="https://news.ycombinator.com/user?id=cinquemb">cinquemb</a></strong> &nbsp;•&nbsp;
                                     2018-05-27 04:49:51 &nbsp;•&nbsp;
-                                    111 comments &nbsp;•&nbsp;
+                                    112 comments &nbsp;•&nbsp;
                                     166.0 points
                                 </span>
                             </td>
@@ -546,15 +546,15 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17154797">Apple's 7nm A12 chip could be the best feature in the 2018 iPhones</a>
+                                    <a href="https://news.ycombinator.com/item?id=17166054">Space Invaders from Scratch</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://www.macworld.com/article/3275567/iphone-ipad/apple-7nm-a12-chip-iphone.html">Article</a> &nbsp;•&nbsp;
-                                    <strong><a href="https://news.ycombinator.com/user?id=rbanffy">rbanffy</a></strong> &nbsp;•&nbsp;
-                                    2018-05-25 15:46:04 &nbsp;•&nbsp;
-                                    180 comments &nbsp;•&nbsp;
-                                    161.0 points
+                                    <a class="node" href="http://nicktasios.nl/posts/space-invaders-from-scratch-part-1.html">Article</a> &nbsp;•&nbsp;
+                                    <strong><a href="https://news.ycombinator.com/user?id=Grieverheart">Grieverheart</a></strong> &nbsp;•&nbsp;
+                                    2018-05-27 08:28:07 &nbsp;•&nbsp;
+                                    26 comments &nbsp;•&nbsp;
+                                    162.0 points
                                 </span>
                             </td>
                         </tr>
@@ -602,7 +602,7 @@
         </div>
         <div class="inner fr">
             <div class="sep10"></div>
-            <strong>Last update at 2018-05-28 07:30:03.609829</strong>
+            <strong>Last update at 2018-05-28 07:40:03.841914</strong>
         </div>
     </div>
 </div>
