--- a/top_stories/daily/page3.html
+++ b/top_stories/daily/page3.html
@@ -166,6 +166,26 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
+                                    <a href="https://news.ycombinator.com/item?id=17170126">Chess.com Acquires Komodo; Launches New 'Monte Carlo' Version</a>
+                                </span>
+                                <div class="sep5"></div>
+                                <span class="small fade">
+                                    <a class="node" href="https://www.chess.com/news/view/chess-com-acquires-komodo-launches-new-monte-carlo-version-similar-to-alphazero">Article</a> &nbsp;•&nbsp;
+                                    <strong><a href="https://news.ycombinator.com/user?id=poster123">poster123</a></strong> &nbsp;•&nbsp;
+                                    2018-05-28 01:30:40 &nbsp;•&nbsp;
+                                    0 comments &nbsp;•&nbsp;
+                                    6.0 points
+                                </span>
+                            </td>
+                        </tr>
+                    </table>
+                </div>
+                
+                <div class="cell item" style="">
+                    <table cellpadding="0" cellspacing="0" border="0" width="100%">
+                        <tr>
+                            <td width="auto" valign="middle">
+                                <span class="item_title">
                                     <a href="https://news.ycombinator.com/item?id=17169563">Rosewood massacre</a>
                                 </span>
                                 <div class="sep5"></div>
@@ -233,27 +253,7 @@
                                     <a class="node" href="https://www.zdnet.com/article/in-2018-windows-died-at-home-and-nobody-cared/">Article</a> &nbsp;•&nbsp;
                                     <strong><a href="https://news.ycombinator.com/user?id=Tuldok">Tuldok</a></strong> &nbsp;•&nbsp;
                                     2018-05-28 05:43:36 &nbsp;•&nbsp;
-                                    2 comments &nbsp;•&nbsp;
-                                    5.0 points
-                                </span>
-                            </td>
-                        </tr>
-                    </table>
-                </div>
-                
-                <div class="cell item" style="">
-                    <table cellpadding="0" cellspacing="0" border="0" width="100%">
-                        <tr>
-                            <td width="auto" valign="middle">
-                                <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17170531">U.S. startups are in a surprising 13-year slump</a>
-                                </span>
-                                <div class="sep5"></div>
-                                <span class="small fade">
-                                    <a class="node" href="https://www.axios.com/startups-slump-13-years-artificial-intelligence-us-ef914164-78f7-4783-b912-2ea50a06968d.html">Article</a> &nbsp;•&nbsp;
-                                    <strong><a href="https://news.ycombinator.com/user?id=justswim">justswim</a></strong> &nbsp;•&nbsp;
-                                    2018-05-28 04:08:22 &nbsp;•&nbsp;
-                                    0 comments &nbsp;•&nbsp;
+                                    3 comments &nbsp;•&nbsp;
                                     5.0 points
                                 </span>
                             </td>
@@ -602,7 +602,7 @@
         </div>
         <div class="inner fr">
             <div class="sep10"></div>
-            <strong>Last update at 2018-05-28 08:00:03.088277</strong>
+            <strong>Last update at 2018-05-28 08:10:03.249159</strong>
         </div>
     </div>
 </div>
