--- a/top_stories/week/index.html
+++ b/top_stories/week/index.html
@@ -98,7 +98,7 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_hot_topic_title">
-                                    <a href="https://news.ycombinator.com/item?id=17151966">Hybrids – UI Library for Web Components with Simple and Functional API</a>
+                                    <a href="https://news.ycombinator.com/item?id=17160131">Experimenting with Clojure 1.9's tools.deps and CLI</a>
                                 </span>
                             </td>
                         </tr>
@@ -110,7 +110,7 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_hot_topic_title">
-                                    <a href="https://news.ycombinator.com/item?id=17160131">Experimenting with Clojure 1.9's tools.deps and CLI</a>
+                                    <a href="https://news.ycombinator.com/item?id=17161122">A k-means clustering algorithm implementation written in Go</a>
                                 </span>
                             </td>
                         </tr>
@@ -599,7 +599,7 @@
         </div>
         <div class="inner fr">
             <div class="sep10"></div>
-            <strong>Last update at 2018-05-28 09:40:03.805527</strong>
+            <strong>Last update at 2018-05-28 09:50:04.628025</strong>
         </div>
     </div>
 </div>
