--- a/top_stories/daily/page1.html
+++ b/top_stories/daily/page1.html
@@ -98,7 +98,7 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_hot_topic_title">
-                                    <a href="https://news.ycombinator.com/item?id=17151966">Hybrids – UI Library for Web Components with Simple and Functional API</a>
+                                    <a href="https://news.ycombinator.com/item?id=17160131">Experimenting with Clojure 1.9's tools.deps and CLI</a>
                                 </span>
                             </td>
                         </tr>
@@ -110,7 +110,7 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_hot_topic_title">
-                                    <a href="https://news.ycombinator.com/item?id=17160131">Experimenting with Clojure 1.9's tools.deps and CLI</a>
+                                    <a href="https://news.ycombinator.com/item?id=17161122">A k-means clustering algorithm implementation written in Go</a>
                                 </span>
                             </td>
                         </tr>
@@ -174,7 +174,7 @@
                                     <strong><a href="https://news.ycombinator.com/user?id=stargrave">stargrave</a></strong> &nbsp;•&nbsp;
                                     2018-05-27 19:33:01 &nbsp;•&nbsp;
                                     23 comments &nbsp;•&nbsp;
-                                    71.0 points
+                                    72.0 points
                                 </span>
                             </td>
                         </tr>
@@ -234,7 +234,7 @@
                                     <strong><a href="https://news.ycombinator.com/user?id=rbanffy">rbanffy</a></strong> &nbsp;•&nbsp;
                                     2018-05-27 21:44:53 &nbsp;•&nbsp;
                                     10 comments &nbsp;•&nbsp;
-                                    61.0 points
+                                    63.0 points
                                 </span>
                             </td>
                         </tr>
@@ -414,7 +414,7 @@
                                     <strong><a href="https://news.ycombinator.com/user?id=dnetesn">dnetesn</a></strong> &nbsp;•&nbsp;
                                     2018-05-27 22:48:37 &nbsp;•&nbsp;
                                     2 comments &nbsp;•&nbsp;
-                                    26.0 points
+                                    27.0 points
                                 </span>
                             </td>
                         </tr>
@@ -433,7 +433,7 @@
                                     <a class="node" href="http://opensourceprojects.org/python-modifying-events-with-the-google-calendar-api/">Article</a> &nbsp;•&nbsp;
                                     <strong><a href="https://news.ycombinator.com/user?id=mondgott">mondgott</a></strong> &nbsp;•&nbsp;
                                     2018-05-27 19:34:04 &nbsp;•&nbsp;
-                                    5 comments &nbsp;•&nbsp;
+                                    6 comments &nbsp;•&nbsp;
                                     25.0 points
                                 </span>
                             </td>
@@ -602,7 +602,7 @@
         </div>
         <div class="inner fr">
             <div class="sep10"></div>
-            <strong>Last update at 2018-05-28 09:40:03.805527</strong>
+            <strong>Last update at 2018-05-28 09:50:04.628025</strong>
         </div>
     </div>
 </div>
