--- a/top_stories/week/page1.html
+++ b/top_stories/week/page1.html
@@ -98,7 +98,7 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_hot_topic_title">
-                                    <a href="https://news.ycombinator.com/item?id=17151966">Hybrids – UI Library for Web Components with Simple and Functional API</a>
+                                    <a href="https://news.ycombinator.com/item?id=17160131">Experimenting with Clojure 1.9's tools.deps and CLI</a>
                                 </span>
                             </td>
                         </tr>
@@ -110,7 +110,7 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_hot_topic_title">
-                                    <a href="https://news.ycombinator.com/item?id=17160131">Experimenting with Clojure 1.9's tools.deps and CLI</a>
+                                    <a href="https://news.ycombinator.com/item?id=17161122">A k-means clustering algorithm implementation written in Go</a>
                                 </span>
                             </td>
                         </tr>
@@ -374,7 +374,7 @@
                                     <strong><a href="https://news.ycombinator.com/user?id=lainon">lainon</a></strong> &nbsp;•&nbsp;
                                     2018-05-26 16:57:37 &nbsp;•&nbsp;
                                     136 comments &nbsp;•&nbsp;
-                                    352.0 points
+                                    353.0 points
                                 </span>
                             </td>
                         </tr>
@@ -446,14 +446,14 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17164737">How to write efficient matrix multiplication</a>
+                                    <a href="https://news.ycombinator.com/item?id=17169331">Python’s For - Else</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://gist.github.com/nadavrot/5b35d44e8ba3dd718e595e40184d03f0">Article</a> &nbsp;•&nbsp;
-                                    <strong><a href="https://news.ycombinator.com/user?id=Mtz1974">Mtz1974</a></strong> &nbsp;•&nbsp;
-                                    2018-05-26 23:29:46 &nbsp;•&nbsp;
-                                    85 comments &nbsp;•&nbsp;
+                                    <a class="node" href="http://book.pythontips.com/en/latest/for_-_else.html">Article</a> &nbsp;•&nbsp;
+                                    <strong><a href="https://news.ycombinator.com/user?id=federicoponzi">federicoponzi</a></strong> &nbsp;•&nbsp;
+                                    2018-05-27 22:01:52 &nbsp;•&nbsp;
+                                    175 comments &nbsp;•&nbsp;
                                     342.0 points
                                 </span>
                             </td>
@@ -466,15 +466,15 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17169331">Python’s For - Else</a>
+                                    <a href="https://news.ycombinator.com/item?id=17164737">How to write efficient matrix multiplication</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="http://book.pythontips.com/en/latest/for_-_else.html">Article</a> &nbsp;•&nbsp;
-                                    <strong><a href="https://news.ycombinator.com/user?id=federicoponzi">federicoponzi</a></strong> &nbsp;•&nbsp;
-                                    2018-05-27 22:01:52 &nbsp;•&nbsp;
-                                    175 comments &nbsp;•&nbsp;
-                                    340.0 points
+                                    <a class="node" href="https://gist.github.com/nadavrot/5b35d44e8ba3dd718e595e40184d03f0">Article</a> &nbsp;•&nbsp;
+                                    <strong><a href="https://news.ycombinator.com/user?id=Mtz1974">Mtz1974</a></strong> &nbsp;•&nbsp;
+                                    2018-05-26 23:29:46 &nbsp;•&nbsp;
+                                    85 comments &nbsp;•&nbsp;
+                                    342.0 points
                                 </span>
                             </td>
                         </tr>
@@ -602,7 +602,7 @@
         </div>
         <div class="inner fr">
             <div class="sep10"></div>
-            <strong>Last update at 2018-05-28 09:40:03.805527</strong>
+            <strong>Last update at 2018-05-28 09:50:04.628025</strong>
         </div>
     </div>
 </div>
