--- a/top_stories/week/page2.html
+++ b/top_stories/week/page2.html
@@ -98,7 +98,7 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_hot_topic_title">
-                                    <a href="https://news.ycombinator.com/item?id=17151966">Hybrids – UI Library for Web Components with Simple and Functional API</a>
+                                    <a href="https://news.ycombinator.com/item?id=17160131">Experimenting with Clojure 1.9's tools.deps and CLI</a>
                                 </span>
                             </td>
                         </tr>
@@ -110,7 +110,7 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_hot_topic_title">
-                                    <a href="https://news.ycombinator.com/item?id=17160131">Experimenting with Clojure 1.9's tools.deps and CLI</a>
+                                    <a href="https://news.ycombinator.com/item?id=17161122">A k-means clustering algorithm implementation written in Go</a>
                                 </span>
                             </td>
                         </tr>
@@ -274,7 +274,7 @@
                                     <strong><a href="https://news.ycombinator.com/user?id=Four_Star">Four_Star</a></strong> &nbsp;•&nbsp;
                                     2018-05-27 11:58:58 &nbsp;•&nbsp;
                                     120 comments &nbsp;•&nbsp;
-                                    293.0 points
+                                    294.0 points
                                 </span>
                             </td>
                         </tr>
@@ -602,7 +602,7 @@
         </div>
         <div class="inner fr">
             <div class="sep10"></div>
-            <strong>Last update at 2018-05-28 09:40:03.805527</strong>
+            <strong>Last update at 2018-05-28 09:50:04.628025</strong>
         </div>
     </div>
 </div>
