--- a/top_stories/week/page4.html
+++ b/top_stories/week/page4.html
@@ -98,7 +98,7 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_hot_topic_title">
-                                    <a href="https://news.ycombinator.com/item?id=17151966">Hybrids – UI Library for Web Components with Simple and Functional API</a>
+                                    <a href="https://news.ycombinator.com/item?id=17160131">Experimenting with Clojure 1.9's tools.deps and CLI</a>
                                 </span>
                             </td>
                         </tr>
@@ -110,7 +110,7 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_hot_topic_title">
-                                    <a href="https://news.ycombinator.com/item?id=17160131">Experimenting with Clojure 1.9's tools.deps and CLI</a>
+                                    <a href="https://news.ycombinator.com/item?id=17161122">A k-means clustering algorithm implementation written in Go</a>
                                 </span>
                             </td>
                         </tr>
@@ -466,6 +466,26 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
+                                    <a href="https://news.ycombinator.com/item?id=17165800">Oracle plans to dump risky Java serialization</a>
+                                </span>
+                                <div class="sep5"></div>
+                                <span class="small fade">
+                                    <a class="node" href="https://www.infoworld.com/article/3275924/java/oracle-plans-to-dump-risky-java-serialization.html">Article</a> &nbsp;•&nbsp;
+                                    <strong><a href="https://news.ycombinator.com/user?id=s-macke">s-macke</a></strong> &nbsp;•&nbsp;
+                                    2018-05-27 06:44:02 &nbsp;•&nbsp;
+                                    100 comments &nbsp;•&nbsp;
+                                    194.0 points
+                                </span>
+                            </td>
+                        </tr>
+                    </table>
+                </div>
+                
+                <div class="cell item" style="">
+                    <table cellpadding="0" cellspacing="0" border="0" width="100%">
+                        <tr>
+                            <td width="auto" valign="middle">
+                                <span class="item_title">
                                     <a href="https://news.ycombinator.com/item?id=17168713">Why “children,” not “childs”? (2016)</a>
                                 </span>
                                 <div class="sep5"></div>
@@ -515,26 +535,6 @@
                                     2018-05-24 18:49:20 &nbsp;•&nbsp;
                                     317 comments &nbsp;•&nbsp;
                                     192.0 points
-                                </span>
-                            </td>
-                        </tr>
-                    </table>
-                </div>
-                
-                <div class="cell item" style="">
-                    <table cellpadding="0" cellspacing="0" border="0" width="100%">
-                        <tr>
-                            <td width="auto" valign="middle">
-                                <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17165800">Oracle plans to dump risky Java serialization</a>
-                                </span>
-                                <div class="sep5"></div>
-                                <span class="small fade">
-                                    <a class="node" href="https://www.infoworld.com/article/3275924/java/oracle-plans-to-dump-risky-java-serialization.html">Article</a> &nbsp;•&nbsp;
-                                    <strong><a href="https://news.ycombinator.com/user?id=s-macke">s-macke</a></strong> &nbsp;•&nbsp;
-                                    2018-05-27 06:44:02 &nbsp;•&nbsp;
-                                    100 comments &nbsp;•&nbsp;
-                                    191.0 points
                                 </span>
                             </td>
                         </tr>
@@ -601,7 +601,7 @@
         </div>
         <div class="inner fr">
             <div class="sep10"></div>
-            <strong>Last update at 2018-05-28 09:40:03.805527</strong>
+            <strong>Last update at 2018-05-28 09:50:04.628025</strong>
         </div>
     </div>
 </div>
