--- a/top_stories/daily/page4.html
+++ b/top_stories/daily/page4.html
@@ -166,26 +166,6 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17167532">An Introduction to the Z File System (ZFS) for Linux (2014)</a>
-                                </span>
-                                <div class="sep5"></div>
-                                <span class="small fade">
-                                    <a class="node" href="https://www.howtogeek.com/175159/an-introduction-to-the-z-file-system-zfs-for-linux/">Article</a> &nbsp;•&nbsp;
-                                    <strong><a href="https://news.ycombinator.com/user?id=tosh">tosh</a></strong> &nbsp;•&nbsp;
-                                    2018-05-27 16:12:08 &nbsp;•&nbsp;
-                                    0 comments &nbsp;•&nbsp;
-                                    4.0 points
-                                </span>
-                            </td>
-                        </tr>
-                    </table>
-                </div>
-                
-                <div class="cell item" style="">
-                    <table cellpadding="0" cellspacing="0" border="0" width="100%">
-                        <tr>
-                            <td width="auto" valign="middle">
-                                <span class="item_title">
                                     <a href="https://news.ycombinator.com/item?id=17167475">The making of 4kb demoscene production “Oscar's Chair”</a>
                                 </span>
                                 <div class="sep5"></div>
@@ -294,6 +274,26 @@
                                     <strong><a href="https://news.ycombinator.com/user?id=oxinabox">oxinabox</a></strong> &nbsp;•&nbsp;
                                     2018-05-28 10:05:21 &nbsp;•&nbsp;
                                     1 comments &nbsp;•&nbsp;
+                                    3.0 points
+                                </span>
+                            </td>
+                        </tr>
+                    </table>
+                </div>
+                
+                <div class="cell item" style="">
+                    <table cellpadding="0" cellspacing="0" border="0" width="100%">
+                        <tr>
+                            <td width="auto" valign="middle">
+                                <span class="item_title">
+                                    <a href="https://news.ycombinator.com/item?id=17171558">But what is this “machine learning engineer” actually doing?</a>
+                                </span>
+                                <div class="sep5"></div>
+                                <span class="small fade">
+                                    <a class="node" href="https://medium.com/@tomaszdudek/but-what-is-this-machine-learning-engineer-actually-doing-18464d5c699">Article</a> &nbsp;•&nbsp;
+                                    <strong><a href="https://news.ycombinator.com/user?id=wielebny">wielebny</a></strong> &nbsp;•&nbsp;
+                                    2018-05-28 09:52:22 &nbsp;•&nbsp;
+                                    0 comments &nbsp;•&nbsp;
                                     3.0 points
                                 </span>
                             </td>
@@ -601,7 +601,7 @@
         </div>
         <div class="inner fr">
             <div class="sep10"></div>
-            <strong>Last update at 2018-05-28 11:50:03.761019</strong>
+            <strong>Last update at 2018-05-28 12:00:02.849276</strong>
         </div>
     </div>
 </div>
