--- a/top_stories/week/page3.html
+++ b/top_stories/week/page3.html
@@ -373,8 +373,8 @@
                                     <a class="node" href="https://www.seattletimes.com/business/bitcoin-backlash-as-miners-suck-up-electricity-stress-power-grids-in-central-washington/">Article</a> &nbsp;•&nbsp;
                                     <strong><a href="https://news.ycombinator.com/user?id=danso">danso</a></strong> &nbsp;•&nbsp;
                                     2018-05-27 03:21:09 &nbsp;•&nbsp;
-                                    251 comments &nbsp;•&nbsp;
-                                    232.0 points
+                                    252 comments &nbsp;•&nbsp;
+                                    233.0 points
                                 </span>
                             </td>
                         </tr>
@@ -546,14 +546,14 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17118342">Ethiopia is now Africa's fastest growing economy</a>
+                                    <a href="https://news.ycombinator.com/item?id=17165800">Oracle plans to dump risky Java serialization</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="http://www.phillytrib.com/news/ethiopia-is-now-africa-s-fastest-growing-economy/article_7c72f20d-3d2b-5901-9d02-9aba91e68e04.html">Article</a> &nbsp;•&nbsp;
-                                    <strong><a href="https://news.ycombinator.com/user?id=thomas">thomas</a></strong> &nbsp;•&nbsp;
-                                    2018-05-21 13:51:54 &nbsp;•&nbsp;
-                                    194 comments &nbsp;•&nbsp;
+                                    <a class="node" href="https://www.infoworld.com/article/3275924/java/oracle-plans-to-dump-risky-java-serialization.html">Article</a> &nbsp;•&nbsp;
+                                    <strong><a href="https://news.ycombinator.com/user?id=s-macke">s-macke</a></strong> &nbsp;•&nbsp;
+                                    2018-05-27 06:44:02 &nbsp;•&nbsp;
+                                    126 comments &nbsp;•&nbsp;
                                     219.0 points
                                 </span>
                             </td>
@@ -602,7 +602,7 @@
         </div>
         <div class="inner fr">
             <div class="sep10"></div>
-            <strong>Last update at 2018-05-28 12:40:03.063315</strong>
+            <strong>Last update at 2018-05-28 12:50:03.557713</strong>
         </div>
     </div>
 </div>
